# nsalvacao-claude-code-plugins

./: .editorconfig  .gitattributes  .gitignore  .markdownlint.json  .markdownlintrc  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  release-please-config.json
.claude-plugin/: marketplace.json
.dev/: .env.example
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ai-review.yml  docs-sync.yml  housekeeping.yml  plugin-validation.yml  release.yml  repository-health.yml  security.yml
docs/: PLUGIN_GUIDELINES.md  RELEASE_CHECKLIST.md  plugins-inventory.md
docs/plans/: 2026-03-10-repo-structure-elevation-design.md  2026-03-10-repo-structure-v020.md  2026-03-10-solution-audit-elevation-design.md  2026-03-10-solution-audit-v020.md
plugins/: CLAUDE.md  README.md
plugins/agile-lifecycle/: CHANGELOG.md  LICENSE  README.md
plugins/audit-fleet/: README.md
plugins/gemini-delegate/: LICENSE  README.md
plugins/idea-auditor/: .mcp.json  README.md
plugins/idea-auditor/mcp/servers/analytics-bridge/: pyproject.toml  server.py
plugins/idea-auditor/mcp/servers/evidence-harvester/: pyproject.toml  server.py
plugins/plugin-dev/: CHANGELOG.md  README.md
plugins/plugin-studio/: .gitignore  README.md  STATUS.md
plugins/product-management/: MCP-SETUP.md  README.md
plugins/productivity/: README.md
plugins/productivity-cockpit/: .gitignore  MCP-SETUP.md  README.md
plugins/qwen-delegate/: README.md
plugins/repo-structure/: .gitignore  CHANGELOG.md  LICENSE  README.md  TESTING.md  repo-structure.config.example.yaml
plugins/solution-audit/: README.md
plugins/strategy-toolkit/: README.md
scripts/: sync-docs.py
(+609 files in other folders)
