[project]
name = "idea-auditor-analytics-bridge"
version = "0.5.0"
description = "MCP server for idea-auditor: bridges product analytics providers (PostHog, Mixpanel, Amplitude) to evidence.schema.json items for TTFV/activation/referral signals."
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

py_modules = ["server"]

[project.scripts]
analytics-bridge = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
