[project]
name = "idea-auditor-evidence-harvester"
version = "0.5.0"
description = "MCP server for idea-auditor: fetches external evidence signals (GitHub stats, registry downloads, trends, competitor scan) and normalizes them to evidence.schema.json."
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
evidence-harvester = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
